resources/rendered/node-web-app/node-web-app/templates/05-node-web-app-deployment.yaml
---
# Source: node-web-app/templates/05-node-web-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "node-web-app-deployment-development"
  namespace: 
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  selector:
    matchLabels:
      app: node-web-app
  replicas: 3
  template:
    metadata:
      labels:
        app: node-web-app
        version: 1.2.0
    spec:
      serviceAccountName: cicd-sa
      containers:
      - name: node-web-app
        image: 
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      automountServiceAccountToken: true
