resources/rendered/node-web-app/node-web-app/templates/07-node-web-app-service.yaml
---
# Source: node-web-app/templates/07-node-web-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "node-web-app-service-development"
  namespace: 
  annotations:
    argocd.argoproj.io/sync-wave: "7"
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: node-web-app
