resources/rendered/node-web-app/node-web-app/templates/06-node-web-app-route.yaml
---
# Source: node-web-app/templates/06-node-web-app-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: "node-web-app-route-development"
  namespace: 
  annotations:
    argocd.argoproj.io/sync-wave: "6"
spec:
  host: 
  to:
    kind: Service
    name: "node-web-app-service-development"
    weight: 100
